[gd_scene load_steps=3 format=3 uid="uid://c1rwx6anh3u3m"]

[ext_resource type="Script" path="res://addons/gdUnit4/test/update/bbcodeView.gd" id="1"]
[ext_resource type="Script" path="res://addons/gdUnit4/src/update/GdUnitUpdateClient.gd" id="6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 600

[node name="TextEdit" type="TextEdit" parent="HSplitContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer"]
use_parent_material = true
layout_mode = 2
tooltip_text = "test"
bbcode_enabled = true

[node name="GdUnitUpdateClient" type="Node" parent="."]
script = ExtResource("6")

[connection signal="text_changed" from="HSplitContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="meta_clicked" from="HSplitContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_hover_ended" from="HSplitContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_hover_ended"]
[connection signal="meta_hover_started" from="HSplitContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_hover_started"]
